[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/weapons/sentry.obj" type="ArrayMesh" id=1]
[ext_resource path="res://Weapons/Sentry.gd" type="Script" id=2]
[ext_resource path="res://assets/materials/lowpoly_material.tres" type="Material" id=3]
[ext_resource path="res://UI/HealthBar3D.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sounds/gunshot.wav" type="AudioStream" id=5]

[sub_resource type="CylinderShape" id=1]

[sub_resource type="SphereShape" id=2]
radius = 10.0

[node name="Sentry" type="StaticBody"]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 1 )

[node name="Model" type="MeshInstance" parent="."]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )
material_override = ExtResource( 3 )
mesh = ExtResource( 1 )
material/0 = ExtResource( 3 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 2 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
unit_size = 7.0

[node name="Muzzle" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2022, -1.651 )

[node name="HealthBar" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.9411, 0 )

[node name="AmmoBar" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.23929, 0 )
color = Color( 0.572549, 0.137255, 0.647059, 1 )
height = 15

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
